Adds Adminitrate and user dasheboard to app

--- a/app/views/dash/index.html.erb
+++ b/app/views/dash/index.html.erb
@@ -17,6 +17,10 @@
 
 <% end %>
 
+<span>
+    <%= link_to('Settings', "admin#settings") %>
+</span>
+
 <h1>Dashboard</h1> 
 <span><%= (current_user.superadmin_role?) ? "Admin" : ((current_user.supervisor_role?) ? "Supervisor" : "User") %> </span>
 
