Adds tailwindcss and header partial

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,10 @@
 // app/javascript/stylesheets/application.scss
-@import 'toastr'
+@import 'toastr';
+
+// /* tailwind */
+
+@import 'tailwindcss/base';
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
