--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,10 +1,9 @@
 // app/javascript/stylesheets/application.scss
 @import 'toastr';
 
+@import "~bootstrap/scss/bootstrap";
+
 // /* tailwind */
-
-@import 'tailwindcss/base';
-
-@import "tailwindcss/components";
-
-@import "tailwindcss/utilities";
+// @import 'tailwindcss/base';
+// @import "tailwindcss/components";
+// @import "tailwindcss/utilities";
