Adds tooltip and popover functionality to bootstrap

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,7 +1,7 @@
 // app/javascript/stylesheets/application.scss
-@import 'toastr';
+// @import 'toastr';
 
-@import "~bootstrap/scss/bootstrap";
+@import "bootstrap";
 
 // /* tailwind */
 // @import 'tailwindcss/base';
