--- a/app/views/dash/index.html.erb
+++ b/app/views/dash/index.html.erb
@@ -5,7 +5,33 @@
 	<p>Visible only for superadmins and supervisors! </p>
 <% end %>
 
-<h2>Orders</h2>
+<div id="orders">
+  <h2>Orders</h2>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<div>
+
 <h2>Estimates</h2>
 <h2>Keywords</h2>
 
@@ -32,5 +58,5 @@
 <span>
     <%= link_to('Settings', "admin#settings") %>
 </span>
-</dvi>
+</div>
 
