--- a/app/views/dash/index.html.erb
+++ b/app/views/dash/index.html.erb
@@ -1,62 +1,101 @@
-<h1>Dashboard</h1> 
-<span><%= (current_user.superadmin_role?) ? "Admin" : ((current_user.supervisor_role?) ? "Supervisor" : "User") %> </span>
+<div class="container mx-auto">
+  <h1 class="pt-5">Dashboard 
+    <span><%= (current_user.superadmin_role?) ? "Admin" : ((current_user.supervisor_role?) ? "Supervisor" : "User") %> </span>
+  </h1> 
 
-<% if current_user.superadmin_role? || current_user.supervisor_role? %>
-	<p>Visible only for superadmins and supervisors! </p>
-<% end %>
+  <div id="tooltips">
+    <span class="d-inline-block" tabindex="0" title="Disabled tooltip">
+      <button class="btn btn-primary" data-bs-toggle="tooltip" type="button" disabled>Disabled button</button>
+    </span>
+    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">
+      Tooltip on top
+    </button>
+    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
+      Tooltip on right
+    </button>
+    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Tooltip on bottom">
+      Tooltip on bottom
+    </button>
+    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" title="Tooltip on left">
+      Tooltip on left
+    </button>
+  </div>
 
-<div id="orders">
-  <h2>Orders</h2>
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
+  <div id="popovers">
+    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
+    Popover on top
+    </button>
+    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
+    Popover on right
+    </button>
+    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+    Popover on bottom
+    </button>
+    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Left popover">
+    Popover on left
+    </button>
+  </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <% if current_user.superadmin_role? || current_user.supervisor_role? %>
+    <p>Visible only for superadmins and supervisors! </p>
+  <% end %>
+
+  <div id="orders">
+    <h2>Orders</h2>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
         </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+    
+    <br>
+    <br>
+    <!-- Button trigger modal 2 -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#secondModal">
+      Launch second modal
+    </button>
+
+    <!-- Second Modal -->
+    <div class="modal fade" id="secondModal" tabindex="-1" aria-labelledby="secondModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="secondModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <h1>Wonder what happens if I put something in here!</h1>
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-<div>
 
-<h2>Estimates</h2>
-<h2>Keywords</h2>
+  <h2>Estimates</h2>
+  <h2>Keywords</h2>
 
-<div class="w-100">
-<% if current_user.nil? %>
-	<%= link_to new_user_session_path, class: 'login-button' do %>Sign in<% end %>
-<% else %>
-	<%= link_to dash_index_path, class: 'login-button' do %>Go to App<% end %>
-	<%= link_to destroy_user_session_path, method: :delete do %>Log out<% end %>
-<% end %>
-
-<% if user_signed_in? %>
-
-  <%= link_to('Edit registration', edit_user_registration_path) %>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-
-<% else %>
-
-  <%= link_to('Register', new_user_registration_path)  %>
-  <%= link_to('Login', new_user_session_path)  %>  
-
-<% end %>
-
-<span>
-    <%= link_to('Settings', "admin#settings") %>
-</span>
 </div>
-
+<% console %>
