--- a/app/views/dash/index.html.erb
+++ b/app/views/dash/index.html.erb
@@ -1,50 +1,66 @@
 <div class="container mx-auto">
-  <h1 class="pt-5">Dashboard 
-    <span><%= (current_user.superadmin_role?) ? "Admin" : ((current_user.supervisor_role?) ? "Supervisor" : "User") %> </span>
-  </h1> 
 
-  <div id="tooltips">
-    <span class="d-inline-block" tabindex="0" title="Disabled tooltip">
-      <button class="btn btn-primary" data-bs-toggle="tooltip" type="button" disabled>Disabled button</button>
-    </span>
-    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">
-      Tooltip on top
-    </button>
-    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" title="Tooltip on right">
-      Tooltip on right
-    </button>
-    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Tooltip on bottom">
-      Tooltip on bottom
-    </button>
-    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" title="Tooltip on left">
-      Tooltip on left
-    </button>
-  </div>
-
-  <div id="popovers">
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
-    Popover on top
-    </button>
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
-    Popover on right
-    </button>
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
-    Popover on bottom
-    </button>
-    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Left popover">
-    Popover on left
-    </button>
-  </div>
+  <section id="orders">
+    <h1 class="pt-5">Dashboard 
+      <span><%= (current_user.superadmin_role?) ? "Admin" : ((current_user.supervisor_role?) ? "Supervisor" : "User (#{@user.email})") %> </span>
+    </h1>
+    <h2>My Orders</h2>
+    <p class="nav nav-pills navbar-right"><%= link_to 'Create Order', new_order_url, class: "btn btn-success" %></p>
+    <% if defined?(@orders) %>
+      <table class="table table-stripped">
+        <thead>
+          <tr>
+            <th>Image</th>
+            <th>Order Name</th>
+            <th>Order By</th>
+            <th>Order Number</th>
+            <th colspan="3">Controls</th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <%  @orders.each do |order| %>
+            <tr>
+              <td><% "image_tag(order.image.thumb.url) if order.image?" %></td>
+              <td><%= order.ordername %></td>
+              <td><%= order.user_id.blank? ? 'None' : order.user.email %></td>
+              <td><%= order.ordernumber %></td>
+              <td colspan="3">
+                <%= link_to 'Show', order, class: "btn btn-primary" %>
+                <% if (user_signed_in?) && (order.user == current_user)  %>
+                  <%= link_to 'Edit', edit_order_path(order), class: "btn btn-success" %>
+                  <%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>        
+        </tbody>
+      </table>
+    <% end %>
+  </section>
 
   <% if current_user.superadmin_role? || current_user.supervisor_role? %>
     <p>Visible only for superadmins and supervisors! </p>
   <% end %>
 
-  <div id="orders">
-    <h2>Orders</h2>
+  <section>
+    <h2>Estimates</h2>
+  </section>
+  <section>
+    <h2>Keywords</h2>
+  </section>
+
+  <div>
+    <br><br><br>
+    <h5>Modal Triggers</h5>
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Launch demo modal
+    </button>
+    
+    <!-- Button trigger modal 2 -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#secondModal">
+      Launch second modal
     </button>
 
     <!-- Modal -->
@@ -66,12 +82,7 @@
       </div>
     </div>
     
-    <br>
-    <br>
-    <!-- Button trigger modal 2 -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#secondModal">
-      Launch second modal
-    </button>
+    <br>    
 
     <!-- Second Modal -->
     <div class="modal fade" id="secondModal" tabindex="-1" aria-labelledby="secondModalLabel" aria-hidden="true">
@@ -94,8 +105,6 @@
     </div>
   </div>
 
-  <h2>Estimates</h2>
-  <h2>Keywords</h2>
-
 </div>
+
 <% console %>
