--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
   
   <body>
     <%= render 'layouts/header' %>
-    <%= yield %>
+    <div class="container mx-auto">
+      <%= yield %>
+    </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
