Add gulp and sass to front end build

--- a/app/assets/stylesheets/y-application.scss
+++ b/app/assets/stylesheets/y-application.scss
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+//  @import 'bootstrap/scss/bootstrap.scss';
+
+ body {
+    // background: red;
+    h1{
+        color: #fff;
+    }
+}
